    o Fixed a bug where 'layoutSplit' resulted in a crash if there were only two connections in the structural model and "spring" layout was used.
    o A list of usefull qgraph arguments that can be used in semPaths is now listed in the semPaths help page.
    o Added the 'bifactor' argument to create bifactor layouts. Only supported with layouts 'tree2', 'tree3', 'circle2' and 'circle3'.

Changes in Version 0.3.3
    o Lavaan model syntax is now supported as input
    o Numeric edge labels without using whatLabels argument are now correctly abbreviated
    o Several small fixes

Changes in Version 0.3.2
  o New features
    o Matrix model functionality:
      o Added 'semMatrixAlgebra' to easily perform matrix algebra on any semPlot input object.
      o Added 'modelMatrices' to obtain model matrices of LISREL, Mplus and RAM modeling frameworks of any input to semPlot.
      o Added 'exoVar' and 'exoCov' arguments that can be used to not display variances or covariances of truly exogenous variables (no incoming directed edges)
  o Added 'tree3' and 'circle3' layouts, based on Boker, S. M., McArdle, J. J., & Neale, M. (2002). An algorithm for the hierarchical organization of path diagrams and calculation of components of expected covariance. Structural Equation Modeling, 9(2), 174-194.

  o Major changes
    o Added edgeLabels and nodeLabels arguments to manually overwrite edge and node labels, in the order they appear in the RAM and Vars elements of the 'semPlotModel' that is created internally. In addition to the qgraph change that these can now be assigned lists including expressions it should now be easier to add Greek letters.
    o  MplusAutomation is no longer imported but moved to suggests list. This makes sure that the Tcl/Tk interface is not loaded on loading semPlot and as a result makes sure that semPlot does not result in crashes on Mac computers where Tcl/Tk is not installed.
    o 'style' now defaults to "lisrel" if the input is a Lisrel model.